Worked on Case(ManyToMany)